# nvim-dbeer

./: .gitignore  README.md
ftdetect/: redis.lua
ftplugin/: javascript.lua  sql.lua
go/: go.mod  go.sum
go/database/engine/: informix.go  mssql.go  oracle.go  sqlite.go
go/database/engine/model/: model.go
go/database/engine/mongo/: mongo.go  parser.go
go/database/factory/: factory.go
go/database/table/: table.go
go/logger/: logger.go
lua/: dbeer.lua
lua/dbeer/: core.lua  database.lua  engines.lua  logger.lua  table.lua
rust/: Cargo.toml  test-postgres.sh  test.sh
rust/src/: main.rs
rust/src/dbeer/: border.rs  command.rs  dispatch.rs  error.rs  logger.rs  mod.rs  query.rs  table.rs
rust/src/dbeer/engine/: db2.rs  informix.rs  mod.rs  mongo.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  redis.rs  sqlite.rs
rust/src/dbeer/engine/odbc/: mod.rs  odbc.rs
script/: build.sh
syntax/: redis.vim
