[package]
name = "dbeer"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
chrono = "0.4.41"
mongodb = { version = "3.2.3", features = ["sync"] }
mysql = "26.0.0"
odbc = "0.17.0"
postgres = { version = "0.19.10", features = ["with-chrono-0_4", "with-uuid-0_8"] }
regex = "1.11.1"
serde_json = "1.0.140"
sqlite = "0.37.0"
redis = "0.32.4"
rust_decimal = { version = "1.37.2", features = ["db-postgres"] }
uuid = { version = "1.18.0", features = ["v4"] }
